[metadata]
description_file = README.md
license_files = LICENSE
[flake8]
exclude = .git,
max-line-length = 120
[yapf]
based_on_style = google
spaces_before_comment = 4
split_before_logical_operator = true
continuation_align_style = space
column_limit = 120
split_all_top_level_comma_separated_values = True